--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rexif"
 version = "0.2.0"
-authors = ["epx"]
+authors = ["Elvis Pfützenreuter <epxx@epxx.co>"]
 exclude = ["samples/"]
 
 [lib]
@@ -9,5 +9,5 @@ name = "rexif"
 path = "src/lib.rs"
 
 [[bin]]
-name = "main"
-path = "src/bin.rs"
+name = "rexiftool"
+path = "src/main.rs"
