--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,12 @@
 name = "rexif"
 version = "0.2.0"
 authors = ["Elvis Pfützenreuter <epxx@epxx.co>"]
-exclude = ["samples/", "gitpage/"]
+include = ["**/*.rs", "Cargo.toml"]
 description = "RExif is a native Rust crate, written to extract EXIF data from JPEG and TIFF images."
 license = "MIT"
 homepage = "https://github.com/elvis-epx/rexif"
 repository = "https://github.com/elvis-epx/rexif.git"
+documentation = "http://elvis-epx.github.io/doc/rexif/"
 
 [lib]
 name = "rexif"
